# NTE_DPS_TOOL

./: .gitignore  1_pcapng_解析报告.md  AGENTS.md  Cargo.toml  LICENSING.md  NOTICE.md  NTE_DPS_Meter_IDA关键功能分析.md  NTE_DPS_Meter_逆向分析与整改说明.md  NTE_封包解析算法.md  README.md  README_EN.md  build.rs  characters.json  nte_packet_parser.py  pyproject.toml  项目分析报告_2026-07.md
.github/workflows/: build.yml
Dumper-7/5.6.1-0+UE5-HT/: CppSDK.lnk
data/: 1.pcapng  cue4parse_report.json  娜娜莉.json  安魂曲.json
data/DataTable/: ActivityLocalDataLayerDataTable.json
docs/: packet_content_parser_v2.md
logs/: nte_all_request_packets.jsonl  nte_damage_packets.jsonl
res/languages/: zh-CN.json
src/: abyss_data.rs  advvision_index.rs  app.rs  capture.rs  character_editor.rs  class_hint.rs  config.rs  file_drop.rs  hotkey.rs  main.rs  model.rs  net_event.rs  net_identity.rs  network.rs  object_state.rs  parser.rs  resource_audit.rs  resource_index.rs  runtime_handle.rs  runtime_mapping.rs  scene.rs  target_alias.rs  target_fact.rs  target_identity.rs  target_instance.rs  target_resolver.rs  target_stream.rs  target_track.rs  ue_bitstream.rs  window_attributes.rs
src/app/: abyss.rs  chrome.rs  console_view.rs  detail_panels.rs  diagnostics_ui.rs  editor.rs  history_ui.rs  hit_detail.rs  hud.rs  lifecycle.rs  main_view.rs  mod.rs  theme.rs  timeline.rs
src/engine/: model.rs
tools/: README.md  analyze_nte_ini.py  bootstrap-tools.ps1  build_monster_index.py  build_scene_index.py  export_nte_res.py  external-tools.json  nte_asset_pipeline.py  requirements.txt  unpack_nte_reslist.py
(+27 files in other folders)
